--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Luis Manzanillas,PhD
+title: About me
 ---
 <div class="blurb">
-	<h1>Education!</h1>
-	<p>In construction. <a href="/about">...</a></p>
+	<p>Hi there, I'm Luis an experimental neutrino physicist. <br> I will upload more details soon </p>
 </div><!-- /.blurb -->
