--- a/cv/index.html
+++ b/cv/index.html
@@ -5,4 +5,8 @@ title: Luis Manzanillas, PhD
 <div class="blurb">
 	<h1>Education</h1>
 	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
+	<h1>Conferences</h1>
+	<p>Site in construction </p>
+	<h1>Publications</h1>
+	<p>Site in construction </p>
 </div><!-- /.blurb -->
