--- a/cv/index.html
+++ b/cv/index.html
@@ -3,12 +3,19 @@ layout: default
 title: Luis Manzanillas, PhD
 ---
 <div class="blurb">
-	<h1>Education</h1>
+	<h1>Research and Work Experience</h1>
+	<ul>
+   	<li>2019-Present: Postdoctoral researcher Gerda/LEGEND experiments, \textit{Max-Planck-Institut für Physik}, Munich, Germany.</li>
+    	<li>2017-2019 : </li>
+    	<li>2013-2016</li>
+    	<li>Programming</li>
+    	<li>Computer Science</li>
+  	</ul>
 	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
 	
 </div><!-- /.blurb -->
 <div class="blurb">
-	<h1>Work experience</h1>
+	<h1>Education</h1>
 	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
 	
 </div><!-- /.blurb -->
