--- a/cv/index.html
+++ b/cv/index.html
@@ -5,17 +5,23 @@ title: Luis Manzanillas, PhD
 <div class="blurb">
 	<h1>Research and Work Experience</h1>
 	<ul>
-   	<li>2019-Present: Postdoctoral researcher Gerda/LEGEND experiments, \textit{Max-Planck-Institut für Physik}, Munich, Germany.</li>
-    	<li>2017-2019 : </li>
-    	<li>2013-2016</li>
-    	<li>Programming</li>
-    	<li>Computer Science</li>
+   	<li>2019-Present: Postdoctoral researcher.  Gerda/LEGEND experiments, Max-Planck-Institut für Physik, Munich, Germany.</li>
+    	<li>2017-2019 : Post-doctoral researcher. SoLid experiment, Laboratoire de l'Accélérateur Linéaire (LAL), Univ Paris-Sud, CNRS/IN2P3, Université Paris-Saclay, Orsay, France. </li>
+    	<li>2013-2016 : PhD Student. STEREO experiment, Laboratoire d'Annecy de Physique des Particules (LAPP), Universit\'e Savoie Mont Blanc, Universit\'e Grenoble Alpes, Annecy - France. </li>
   	</ul>
 	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
 	
 </div><!-- /.blurb -->
 <div class="blurb">
 	<h1>Education</h1>
+	 <dl>
+  		<dt>PhD</dt>
+  		<dd>- Universite Grenoble Alpes</dd>
+  		<dt>Master</dt>
+  		<dd>- Universite Clermont Ferrand</dd>
+		 <dt>Bachellor</dt>
+  		<dd>- Escuela Politecnica Nacional</dd>
+	</dl> 
 	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
 	
 </div><!-- /.blurb -->
