--- a/cv/index.html
+++ b/cv/index.html
@@ -1,35 +1,139 @@
----
-layout: default
-title: Luis Manzanillas, PhD
----
-<div class="blurb">
-	<h1>Research and Work Experience</h1>
-	<ul>
-   	<li>2019-Present: Postdoctoral researcher.  Gerda/LEGEND experiments, Max-Planck-Institut für Physik, Munich, Germany.</li>
-    	<li>2017-2019 : Post-doctoral researcher. SoLid experiment, Laboratoire de l'Accélérateur Linéaire (LAL), Univ Paris-Sud, CNRS/IN2P3, Université Paris-Saclay, Orsay, France. </li>
-    	<li>2013-2016 : PhD Student. STEREO experiment, Laboratoire d'Annecy de Physique des Particules (LAPP), Universit\'e Savoie Mont Blanc, Universit\'e Grenoble Alpes, Annecy - France. </li>
-  	</ul>
-	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
-	
-</div><!-- /.blurb -->
-<div class="blurb">
-	<h1>Education</h1>
-	 <dl>
-  		<dt>PhD</dt>
-  		<dd>- Universite Grenoble Alpes</dd>
-  		<dt>Master</dt>
-  		<dd>- Universite Clermont Ferrand</dd>
-		 <dt>Bachellor</dt>
-  		<dd>- Escuela Politecnica Nacional</dd>
-	</dl> 
-	<p>Site in construction. <a href="/about">Read more about my life...</a></p>
-	
-</div><!-- /.blurb -->
-<div class="blurb">
-	<h1>Publications</h1>
-	<p>Site in construction </p>
-</div><!-- /.blurb -->
-<div class="blurb">
-	<h1>Conferences</h1>
-	<p>Site in construction </p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+<head>
+<title>Luis Manzanillas - Curriculum Vitae</title>
+
+<meta name="viewport" content="width=device-width"/>
+<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
+<meta charset="UTF-8">
+
+<link type="text/css" rel="stylesheet" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+</head>
+<body id="top">
+<div id="cv" class="instaFade">
+	<div class="mainDetails">
+		<div id="headshot" class="quickFade">
+			<img src="headshot.jpg" alt="Alan Smith" />
+		</div>
+
+		<div id="name">
+			<h1 class="quickFade delayTwo">Luis Manzanillas</h1>
+			<h2 class="quickFade delayThree">Experimentalist neutrino physicist</h2>
+		</div>
+
+		<div id="contactDetails" class="quickFade delayFour">
+			<ul>
+				<li>e: <a href="mailto:manzanil@mpp.mpg.de" target="_blank">manzanil@mpp.mpg.de</a></li>
+				<li>w: <a href="https://lmanzanillas.github.io/">https://lmanzanillas.github.io/</a></li>
+				<li>m: 01234567890</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+	<div id="mainArea" class="quickFade delayFive">
+		<section>
+			<article>
+				<div class="sectionTitle">
+					<h1>Personal Profile</h1>
+				</div>
+
+				<div class="sectionContent">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+				</div>
+			</article>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Work Experience</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>Post-doctoral researcher at Max Planck Institute for Physics: GERDA/LEGEND experiments </h2>
+					<p class="subDetails">October 2019 - Present</p>
+					<p> Data analysis with GERDA data and.<br>
+					 R&D for LEGEND200/LEGEND1000: Characterization and optimization  of PEN as self-vetoing structural material for LEGEND detector</p>
+				</article>
+
+				<article>
+					<h2>Post-doctoral researcher at LAL: SoLid experiment</h2>
+					<p class="subDetails">February 2017 - September 2019</p>
+					<p>Quality assurance coordinator during detector construction.<br>
+					Run and calibration coordinator after commissioning.<br>
+					IBD signal + BiPo background analysis.</p>
+				</article>
+
+				<article>
+					<h2>Job Title at Company</h2>
+					<p class="subDetails">October 2004 - December 2006</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Key Skills</h1>
+			</div>
+
+			<div class="sectionContent">
+				<ul class="keySkills">
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+					<li>A Key Skill</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Education</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>College/University</h2>
+					<p class="subDetails">Qualification</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+				</article>
+
+				<article>
+					<h2>College/University</h2>
+					<p class="subDetails">Qualification</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+	</div>
+</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3753241-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+</body>
+</html>
