--- a/cv/index.html
+++ b/cv/index.html
@@ -73,15 +73,44 @@
 				</article>
 
 				<article>
-					<h2>Job Title at Company</h2>
-					<p class="subDetails">October 2004 - December 2006</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<h2>PhD at LAPP: STEREO experiment</h2>
+					<p class="subDetails">October 2016 - October 2017</p>
+					<p>Development of the source calibration system  of the STEREO experiment  and search for sterile neutrinos at the ILL..</p>
 				</article>
 			</div>
 			<div class="clear"></div>
 		</section>
 
 
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Education</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>Laboratoire d'Annecy de Physique des Particules (LAPP), Universit\'e Grenoble Alpes</h2>
+					<p class="subDetails">Ph.D. in Particle and Astroparticle Physics</p>
+					<p> Supervisors: Pablo del Amo Sanchez and Dominique Duchesneau.</p>
+				</article>
+
+				<article>
+					<h2>Université Blaise Pascal - Université Clermont Auvergne</h2>
+					<p class="subDetails">M.Sc. in Particle Physics</p>
+				</article>
+				
+				<article>
+					<h2>Escuela Polit\'ecnica Nacional</h2>
+					<p class="subDetails">B.Sc. in Physics</p>
+				</article>
+				
+			</div>
+			<div class="clear"></div>
+		</section>
+		
+		
+		
 		<section>
 			<div class="sectionTitle">
 				<h1>Key Skills</h1>
@@ -98,28 +127,6 @@
 					<li>A Key Skill</li>
 					<li>A Key Skill</li>
 				</ul>
-			</div>
-			<div class="clear"></div>
-		</section>
-
-
-		<section>
-			<div class="sectionTitle">
-				<h1>Education</h1>
-			</div>
-
-			<div class="sectionContent">
-				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
-				</article>
-
-				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
-				</article>
 			</div>
 			<div class="clear"></div>
 		</section>
