--- a/cv/index.html
+++ b/cv/index.html
@@ -90,7 +90,7 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>Laboratoire d'Annecy de Physique des Particules (LAPP), Universit\'e Grenoble Alpes</h2>
+					<h2>Laboratoire d'Annecy de Physique des Particules (LAPP), Université Grenoble Alpes</h2>
 					<p class="subDetails">Ph.D. in Particle and Astroparticle Physics</p>
 					<p> Supervisors: Pablo del Amo Sanchez and Dominique Duchesneau.</p>
 				</article>
@@ -101,7 +101,7 @@
 				</article>
 				
 				<article>
-					<h2>Escuela Polit\'ecnica Nacional</h2>
+					<h2>Escuela Politécnica Nacional</h2>
 					<p class="subDetails">B.Sc. in Physics</p>
 				</article>
 				
