--- a/cv/index.html
+++ b/cv/index.html
@@ -38,20 +38,6 @@
 
 	<div id="mainArea" class="quickFade delayFive">
 		<section>
-			<article>
-				<div class="sectionTitle">
-					<h1>Personal Profile</h1>
-				</div>
-
-				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
-				</div>
-			</article>
-			<div class="clear"></div>
-		</section>
-
-
-		<section>
 			<div class="sectionTitle">
 				<h1>Work Experience</h1>
 			</div>
@@ -113,19 +99,31 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Key Skills</h1>
+				<h1>Publications</h1>
 			</div>
 
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
+					<li>Abreu, Y. et al. (2019). Development of a Quality Assurance Process for the SoLid Experiment.
+JINST, 14(02), P02014. doi:https://doi.org/10.1088/1748-0221/14/02/P02014. arXiv:
+1811.05244 [physics.ins-det] </li>
+					<li>Almazán, H. et al. (2019). Search for light sterile neutrinos with the STEREO experiment. EPJ
+Web Conf. 219, 08001. doi:10.1051/epjconf/201921908001 </li>
+					<li>Cabrera, A. et al. (2019). Neutrino Physics with an Opaque Detector. Submitted to NCP. arXiv:
+1908.02859 [physics.ins-det]</li>
+					<li>Abreu, Y. et al. (2018a). Commissioning and Operation of the Readout System for the SoLid
+Neutrino Detector. Submitted to JINST. arXiv: 1812.05425 [physics.ins-det]</li>
+					<li>Abreu, Y. et al. (2018b). Optimisation of the scintillation light collection and uniformity for the
+SoLid experiment. JINST, 13(09), P09005. doi:10.1088/1748-0221/13/09/P09005. arXiv:
+1806.02461 [physics.ins-det] </li>
+					<li>Abreu, Y. et al. (2018c). Performance of a full scale prototype detector at the BR2 reactor for the
+SoLid experiment. JINST, 13(05), P05005. doi:10.1088/1748-0221/13/05/P05005. arXiv:
+1802.02884 [physics.ins-det]</li>
+					<li>Allemandou, N. et al. (2018). The STEREO Experiment. JINST, 13(07), 07.
+doi:10.1088/1748-0221/13/07/P07009. arXiv: 1804.09052 [physics.ins-det]</li>
+					<li>Almazán, H. et al. (2018). Sterile Neutrino Constraints from the STEREO Experiment with 66
+Days of Reactor-On Data. Phys. Rev. Lett. 121(16), 161801.
+doi:10.1103/PhysRevLett.121.161801. arXiv: 1806.02096 [hep-ex]</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
