--- a/cv/index.html
+++ b/cv/index.html
@@ -105,50 +105,40 @@
 			<div class="sectionContent">
 				<h2>Journal articles</h2>
 				<ul>
-					<li>Abreu, Y. et al. (2019). Development of a Quality Assurance Process for the SoLid Experiment.
-JINST, 14(02), P02014. doi:https://doi.org/10.1088/1748-0221/14/02/P02014. arXiv:
-1811.05244 [physics.ins-det] </li>
-					<li>Cabrera, A. et al. (2019). Neutrino Physics with an Opaque Detector. Submitted to NCP. arXiv:
-1908.02859 [physics.ins-det]</li>
-					<li>Abreu, Y. et al. (2018a). Commissioning and Operation of the Readout System for the SoLid
-Neutrino Detector. Submitted to JINST. arXiv: 1812.05425 [physics.ins-det]</li>
-					<li>Abreu, Y. et al. (2018b). Optimisation of the scintillation light collection and uniformity for the
-SoLid experiment. JINST, 13(09), P09005. doi:10.1088/1748-0221/13/09/P09005. arXiv:
-1806.02461 [physics.ins-det] </li>
-					<li>Abreu, Y. et al. (2018c). Performance of a full scale prototype detector at the BR2 reactor for the
-SoLid experiment. JINST, 13(05), P05005. doi:10.1088/1748-0221/13/05/P05005. arXiv:
-1802.02884 [physics.ins-det]</li>
-					<li>Allemandou, N. et al. (2018). The STEREO Experiment. JINST, 13(07), 07.
-doi:10.1088/1748-0221/13/07/P07009. arXiv: 1804.09052 [physics.ins-det]</li>
-					<li>Almazán, H. et al. (2018). Sterile Neutrino Constraints from the STEREO Experiment with 66
-Days of Reactor-On Data. Phys. Rev. Lett. 121(16), 161801.
-doi:10.1103/PhysRevLett.121.161801. arXiv: 1806.02096 [hep-ex]</li>
+					<li>Abreu, Y. et al. (2019). Development of a Quality Assurance Process for the SoLid Experiment. JINST, 14(02), P02014. 
+						<p class="subDetails">doi: <a href="https://doi.org/10.1088/1748-0221/14/02/P02014">10.1088/1748-0221/14/02/P02014.</a> arXiv:<a href="https://arxiv.org/abs/1811.05244">1811.05244[physics.ins-det]</a> </p> </li>
+					<li>Cabrera, A. et al. (2019). Neutrino Physics with an Opaque Detector. Submitted to NCP. 
+						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/1811.05244">1908.02859 [physics.ins-det]</a> </p> </li>
+					<li>Abreu, Y. et al. (2018a). Commissioning and Operation of the Readout System for the SoLid Neutrino Detector. JINST 14 (2019) no.11, P11003. 
+						<p class="subDetails"> doi:<a href="https://doi.org/10.1088/1748-0221/14/11/P11003">10.1088/1748-0221/14/11/P11003.</a> arXiv:<a href="https://arxiv.org/abs/1812.05425">1812.05425[physics.ins-det]</a> </p> </li>
+					<li>Abreu, Y. et al. (2018b). Optimisation of the scintillation light collection and uniformity for the SoLid experiment. JINST, 13(09), P09005.
+						<p class="subDetails"> doi: <a href="https://doi.org/10.1088/1748-0221/13/09/P09005">10.1088/1748-0221/13/09/P09005.</a> arXiv:<a href="https://arxiv.org/abs/1806.02461"> 1806.02461[physics.ins-det]</a> </p> </li>
+					<li>Abreu, Y. et al. (2018c). Performance of a full scale prototype detector at the BR2 reactor for the SoLid experiment. JINST, 13(05), P05005. 
+						<p class="subDetails"> doi: <a href="https://doi.org/10.1088/1748-0221/13/05/P05005">10.1088/1748-0221/13/05/P05005.</a> arXiv:<a href="https://arxiv.org/abs/1802.02884"> 1802.02884[physics.ins-det]</a> </p> </li>
+					<li>Allemandou, N. et al. (2018). The STEREO Experiment. JINST, 13(07), 07. 
+						<p class="subDetails"> doi: <a href="https://doi.org/10.1088/1748-0221/13/07/P07009">10.1088/1748-0221/13/07/P07009.</a> arXiv:<a href="https://arxiv.org/abs/1804.09052"> 1804.09052[physics.ins-det]</a> </p> </li>
+					<li>Almazán, H. et al. (2018). Sterile Neutrino Constraints from the STEREO Experiment with 66 Days of Reactor-On Data. Phys. Rev. Lett. 121(16), 161801.
+						<p class="subDetails"> doi: <a href="https://doi.org/10.1103/PhysRevLett.121.161801">10.1103/PhysRevLett.121.161801.</a> arXiv:<a href="https://arxiv.org/abs/1806.02096"> 1806.02096[hep-exp]</a> </p> </li>
 				</ul>
 				<h2>Conference proceedins</h2>
 				<ul>
 					
-					<li>Almazán, H. et al. (2019). Search for light sterile neutrinos with the STEREO experiment. EPJ
-Web Conf. 219, 08001. doi:10.1051/epjconf/201921908001 </li>
-					<li>Manzanillas, L. (2019a). Calibration of the highly segmented SoLid antineutrino detector. In
-European Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019
-Ghent, Belgium. arXiv: 1910.12825 [physics.ins-det] </li>
-					<li>Manzanillas, L. (2019b). Performance of the SoLid Reactor Neutrino Detector. In European
-Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019 Ghent,
-Belgium. arXiv: 1910.12842 [physics.ins-det]</li>
-					<li>Manzanillas, L. (2019c). Performance of the SoLid Reactor Neutrino Detector. In Proceedings,
-39th International Conference on High Energy Physics (ICHEP2018): Seoul, Korea, July 4-11, 2018
-(Vol. ICHEP2018, p. 426). doi:10.22323/1.340.0426. arXiv: 1811.05694 [physics.ins-det]</li>
-					<li>Manzanillas, L. (2018a). Calibration and energy scale in solid. In Proceedings, Energy Scale
-Calibration in Antineutrino Precision Experiments ESCAPE 2018: Heidelberg, Germany, June 1-2,
-2018. doi:10.5281/zenodo.1314400</li>
-					<li>Manzanillas, L. (2018b). Calibration and quality assurance of the SoLid detector. In Proceedings,
-NEUTRINO 2018: Heidelberg, Germany, June 4-9, 2018. doi:10.5281/zenodo.1300477</li>
-					<li>Manzanillas, L. (2017a). Status of the SoLid experiment: Search for sterile neutrinos at the
-SCK•CEN BR2 reactor. In Proceedings, TAUP2017, Sudbury, ON, Canada, July 24-28, 2017
-(Vol. TAUP2017). arXiv: 1710.07933</li>
-					<li>Manzanillas, L. (2017b). STEREO: Search for sterile neutrinos at the ILL. In Proceedings,
-Neutrino Oscillation Workshop (NOW 2016): Otranto (Lecce), Italy, September 4-11, 2016
-(Vol. NOW2016, p. 033). arXiv: 1702.02498</li>
+					<li>Almazán, H. et al. (2019). Search for light sterile neutrinos with the STEREO experiment. EPJ Web Conf. 219, 08001.
+						<p class="subDetails">  doi: 10.1051/epjconf/201921908001 </p> </li>
+					<li>Manzanillas, L. (2019a). Calibration of the highly segmented SoLid antineutrino detector. In European Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019 Ghent, Belgium.
+						<p class="subDetails">  arXiv: 1910.12825 [physics.ins-det] </p> </li>
+					<li>Manzanillas, L. (2019b). Performance of the SoLid Reactor Neutrino Detector. In European Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019 Ghent, Belgium. 
+						<p class="subDetails">  arXiv: 1910.12842 [physics.ins-det] </p> </li>
+					<li>Manzanillas, L. (2019c). Performance of the SoLid Reactor Neutrino Detector. In Proceedings, 39th International Conference on High Energy Physics (ICHEP2018): Seoul, Korea, July 4-11, 2018 (Vol. ICHEP2018, p. 426).
+						<p class="subDetails">  doi: 10.22323/1.340.0426. arXiv: 1811.05694 [physics.ins-det] </p> </li>
+					<li>Manzanillas, L. (2018a). Calibration and energy scale in solid. In Proceedings, Energy Scale Calibration in Antineutrino Precision Experiments ESCAPE 2018: Heidelberg, Germany, June 1-2, 2018.
+						<p class="subDetails">   doi: 10.5281/zenodo.1314400 </p> </li>
+					<li>Manzanillas, L. (2018b). Calibration and quality assurance of the SoLid detector. In Proceedings, NEUTRINO 2018: Heidelberg, Germany, June 4-9, 2018. 
+						<p class="subDetails">  doi: 10.5281/zenodo.1300477 </p> </li>
+					<li>Manzanillas, L. (2017a). Status of the SoLid experiment: Search for sterile neutrinos at the SCK•CEN BR2 reactor. In Proceedings, TAUP2017, Sudbury, ON, Canada, July 24-28, 2017 (Vol. TAUP2017).
+						<p class="subDetails">  arXiv: 1710.07933 </p> </li>
+					<li>Manzanillas, L. (2017b). STEREO: Search for sterile neutrinos at the ILL. In Proceedings, Neutrino Oscillation Workshop (NOW 2016): Otranto (Lecce), Italy, September 4-11, 2016 (Vol. NOW2016, p. 033). 
+						<p class="subDetails">  doi: 10.22323/1.283.0033 arXiv: 1702.02498 [physics.ins-det] </p> </li>
 				</ul>
 			</div>
 			<div class="clear"></div>
