--- a/cv/index.html
+++ b/cv/index.html
@@ -24,6 +24,7 @@
 		<div id="name">
 			<h1 class="quickFade delayTwo">Luis Manzanillas</h1>
 			<h2 class="quickFade delayThree">Experimentalist neutrino physicist</h2>
+			<h2 class="quickFade delayThree">Data scientist</h2>
 		</div>
 
 		<div id="contactDetails" class="quickFade delayFour">
@@ -124,21 +125,21 @@
 				<ul>
 					
 					<li>Almazán, H. et al. (2019). Search for light sterile neutrinos with the STEREO experiment. EPJ Web Conf. 219, 08001.
-						<p class="subDetails">  doi: 10.1051/epjconf/201921908001 </p> </li>
+						<p class="subDetails">  doi: <a href="https://doi.org/10.1051/epjconf/201921908001">10.1051/epjconf/201921908001.</a>  </p> </li>
 					<li>Manzanillas, L. (2019a). Calibration of the highly segmented SoLid antineutrino detector. In European Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019 Ghent, Belgium.
-						<p class="subDetails">  arXiv: 1910.12825 [physics.ins-det] </p> </li>
+						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/1910.12825">1910.12825[physics.ins-det]</a> </p> </li>
 					<li>Manzanillas, L. (2019b). Performance of the SoLid Reactor Neutrino Detector. In European Physical Society Conference on High Energy Physics - EPS-HEP2019, 10-17 July, 2019 Ghent, Belgium. 
-						<p class="subDetails">  arXiv: 1910.12842 [physics.ins-det] </p> </li>
+						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/1910.12842">1910.12842[physics.ins-det]</a> </p> </li>
 					<li>Manzanillas, L. (2019c). Performance of the SoLid Reactor Neutrino Detector. In Proceedings, 39th International Conference on High Energy Physics (ICHEP2018): Seoul, Korea, July 4-11, 2018 (Vol. ICHEP2018, p. 426).
-						<p class="subDetails">  doi: 10.22323/1.340.0426. arXiv: 1811.05694 [physics.ins-det] </p> </li>
+						<p class="subDetails"> doi: <a href="https://doi.org/10.22323/1.340.0426">10.22323/1.340.0426.</a> arXiv:<a href="https://arxiv.org/abs/1811.05694"> 1811.05694[hep-exp]</a> </p> </li>
 					<li>Manzanillas, L. (2018a). Calibration and energy scale in solid. In Proceedings, Energy Scale Calibration in Antineutrino Precision Experiments ESCAPE 2018: Heidelberg, Germany, June 1-2, 2018.
-						<p class="subDetails">   doi: 10.5281/zenodo.1314400 </p> </li>
+						<p class="subDetails"> doi: <a href="https://doi.org/10.5281/zenodo.1314400">10.5281/zenodo.1314400.</a>  </p> </li>
 					<li>Manzanillas, L. (2018b). Calibration and quality assurance of the SoLid detector. In Proceedings, NEUTRINO 2018: Heidelberg, Germany, June 4-9, 2018. 
-						<p class="subDetails">  doi: 10.5281/zenodo.1300477 </p> </li>
+						<p class="subDetails"> doi: <a href="https://doi.org/10.5281/zenodo.1300477">10.5281/zenodo.1300477.</a>  </p> </li>
 					<li>Manzanillas, L. (2017a). Status of the SoLid experiment: Search for sterile neutrinos at the SCK•CEN BR2 reactor. In Proceedings, TAUP2017, Sudbury, ON, Canada, July 24-28, 2017 (Vol. TAUP2017).
-						<p class="subDetails">  arXiv: 1710.07933 </p> </li>
+						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/1710.07933">1710.07933[physics.ins-det]</a> </p> </li>
 					<li>Manzanillas, L. (2017b). STEREO: Search for sterile neutrinos at the ILL. In Proceedings, Neutrino Oscillation Workshop (NOW 2016): Otranto (Lecce), Italy, September 4-11, 2016 (Vol. NOW2016, p. 033). 
-						<p class="subDetails">  doi: 10.22323/1.283.0033 arXiv: 1702.02498 [physics.ins-det] </p> </li>
+						<p class="subDetails"> doi: <a href="https://doi.org/10.22323/1.283.0033">10.22323/1.283.0033.</a> arXiv:<a href="https://arxiv.org/abs/1702.02498"> 1702.02498[hep-exp]</a> </p> </li>
 				</ul>
 			</div>
 			<div class="clear"></div>
