--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@
 <title>Luis Manzanillas - Curriculum Vitae</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
+<meta name="description" content="The Curriculum Vitae of Luis Manzanillas."/>
 <meta charset="UTF-8">
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -31,7 +31,8 @@
 			<ul>
 				<li>e: <a href="mailto:manzanil@mpp.mpg.de" target="_blank">manzanil@mpp.mpg.de</a></li>
 				<li>w: <a href="https://lmanzanillas.github.io/">https://lmanzanillas.github.io/</a></li>
-				<li>m: 01234567890</li>
+				<li>m: +33 6 34 29 ** ** </li>
+				<li>cv: <a href="/pdfs/cv-lmanzanillas.pdf"> Full cv in pdf</a>
 			</ul>
 		</div>
 		<div class="clear"></div>
