--- a/cv/index.html
+++ b/cv/index.html
@@ -32,7 +32,7 @@
 				<li>e: <a href="mailto:manzanil@mpp.mpg.de" target="_blank">manzanil@mpp.mpg.de</a></li>
 				<li>w: <a href="https://lmanzanillas.github.io/">https://lmanzanillas.github.io/</a></li>
 				<li>m: +33 6 34 29 ** ** </li>
-				<li>cv: <a href="/https://lmanzanillas.github.io/cv/pdfs/cv-lmanzanillas.pdf"> Full cv in pdf</a>
+				<li>cv: <a href="/cv/pdfs/cv-lmanzanillas.pdf"> Full cv in pdf</a>
 			</ul>
 		</div>
 		<div class="clear"></div>
