--- a/cv/index.html
+++ b/cv/index.html
@@ -46,14 +46,14 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>Post-doctoral researcher at Max Planck Institute for Physics: GERDA/LEGEND experiments </h2>
+					<h2>Post-doctoral researcher at Max Planck Institute for Physics, Munich, Germany: GERDA/LEGEND experiments </h2>
 					<p class="subDetails">October 2019 - Present</p>
 					<p> Data analysis with GERDA data and.<br>
 					 R&D for LEGEND200/LEGEND1000: Characterization and optimization  of PEN as self-vetoing structural material for LEGEND detector</p>
 				</article>
 
 				<article>
-					<h2>Post-doctoral researcher at LAL: SoLid experiment</h2>
+					<h2>Post-doctoral researcher at Laboratoire de l'Accélérateur Linéaire (LAL), Orsay, France: SoLid experiment</h2>
 					<p class="subDetails">February 2017 - September 2019</p>
 					<p>Quality assurance coordinator during detector construction.<br>
 					Run and calibration coordinator after commissioning.<br>
@@ -61,9 +61,9 @@
 				</article>
 
 				<article>
-					<h2>PhD at LAPP: STEREO experiment</h2>
-					<p class="subDetails">October 2016 - October 2017</p>
-					<p>Development of the source calibration system  of the STEREO experiment  and search for sterile neutrinos at the ILL..</p>
+					<h2>PhD at Laboratoire d'Annecy de Physique des Particules (LAPP), Annecy, France: STEREO experiment</h2>
+					<p class="subDetails">October 2013 - October 2016</p>
+					<p>Development of the source calibration system  of the STEREO experiment  and search for sterile neutrinos at the ILL.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -78,18 +78,18 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>Laboratoire d'Annecy de Physique des Particules (LAPP), Université Grenoble Alpes</h2>
+					<h2>Laboratoire d'Annecy de Physique des Particules (LAPP), Université Grenoble Alpes, Annecy, France.</h2>
 					<p class="subDetails">Ph.D. in Particle and Astroparticle Physics</p>
-					<p> Supervisors: Pablo del Amo Sanchez and Dominique Duchesneau.</p>
+					<p class="subDetails"> Supervisors: Pablo del Amo Sanchez and Dominique Duchesneau.</p>
 				</article>
 
 				<article>
-					<h2>Université Blaise Pascal - Université Clermont Auvergne</h2>
+					<h2>Université Blaise Pascal - Université Clermont Auvergne, Clermont-Ferrand, France.</h2>
 					<p class="subDetails">M.Sc. in Particle Physics</p>
 				</article>
 				
 				<article>
-					<h2>Escuela Politécnica Nacional</h2>
+					<h2>Escuela Politécnica Nacional, Quito, Ecuador.</h2>
 					<p class="subDetails">B.Sc. in Physics</p>
 				</article>
 				
