--- a/cv/index.html
+++ b/cv/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -46,14 +50,14 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>Post-doctoral researcher at Max Planck Institute for Physics, Munich, Germany: GERDA/LEGEND experiments </h2>
+					<h2>Post-doctoral researcher at <a href="https://www.mpp.mpg.de/"> Max Planck Institute for Physics</a>, Munich, Germany: GERDA/LEGEND experiments </h2>
 					<p class="subDetails">October 2019 - Present</p>
 					<p> Data analysis with GERDA data and.<br>
 					 R&D for LEGEND200/LEGEND1000: Characterization and optimization  of PEN as self-vetoing structural material for LEGEND detector</p>
 				</article>
 
 				<article>
-					<h2>Post-doctoral researcher at Laboratoire de l'Accélérateur Linéaire (LAL), Orsay, France: SoLid experiment</h2>
+					<h2>Post-doctoral researcher at <a href="https://www.lal.in2p3.fr/en/"> Laboratoire de l'Accélérateur Linéaire (LAL)</a>, Orsay, France: SoLid experiment</h2>
 					<p class="subDetails">February 2017 - September 2019</p>
 					<p>Quality assurance coordinator during detector construction.<br>
 					Run and calibration coordinator after commissioning.<br>
@@ -61,7 +65,7 @@
 				</article>
 
 				<article>
-					<h2>PhD at Laboratoire d'Annecy de Physique des Particules (LAPP), Annecy, France: STEREO experiment</h2>
+					<h2>PhD at <a href="https://lapp.in2p3.fr/"> Laboratoire d'Annecy de Physique des Particules (LAPP)</a>, Annecy, France: STEREO experiment</h2>
 					<p class="subDetails">October 2013 - October 2016</p>
 					<p>Development of the source calibration system  of the STEREO experiment  and search for sterile neutrinos at the ILL.</p>
 				</article>
