--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,6 @@ layout: default
 title: About me
 ---
 <div class="blurb">
+	<h1>About me</h1>
 	<p>Hi there, I'm Luis an experimental neutrino physicist. <br> I will upload more details soon </p>
 </div><!-- /.blurb -->
