--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,12 @@ layout: default
 title: About me
 ---
 <div class="blurb">
-	<h1>About me</h1>
-	<p>Hi there, I'm Luis an experimental neutrino physicist. <br> I will upload more details soon </p>
+	<h2>A very short bio</h2>
+	<p> I'm Luis, I was born in Pozul, a small town located in the mountains in the South of Ecuador, my home country. <br>
+	After graduating from high school in Celica (20 min from Pozul) I moved to Quito, the capital of Ecuador to start teh University studies. Since I was a child I always wanted to do science. <br>
+	However I didn't know at that time what career to study at the University, so I started the "prepo" at the Escuela Politecnica Nacional, probably the best university in Ecuador. At the end of this "prepo" 
+	and in function of your results you can choose your career. The most demanded career was electronic Engineering and since my results at the end of the prepo were quite good I register there, but I wasn't convinced of this choice.
+	Fortunately the university organized some seminars were people from all the faculties presented their careers and the work that you are supposed to do. There I discovered that in the faculty of science existed the career of 
+	physics to become a physicist, and then it was clear that was what I wanted to do. </p>
+	<p> </p>
 </div><!-- /.blurb -->
