--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,19 @@ title: About me
 ---
 <div class="blurb">
 	<h2>A very short bio</h2>
-	<p> I'm Luis, I was born in Pozul, a small town located in the mountains in the South of Ecuador, my home country. <br>
-	After graduating from high school in Celica (20 min from Pozul) I moved to Quito, the capital of Ecuador to start teh University studies. Since I was a child I always wanted to do science. <br>
+	<p> I'm Luis, I was born in Pozul, a small town located in the mountains in the South of Ecuador, my home country. 
+	After graduating from high school in Celica (20 min from Pozul) I moved to Quito, the capital of Ecuador to start the University studies. Since I was a child I always wanted to do science.
 	However I didn't know at that time what career to study at the University, so I started the "prepo" at the Escuela Politecnica Nacional, probably the best university in Ecuador. At the end of this "prepo" 
 	and in function of your results you can choose your career. The most demanded career was electronic Engineering and since my results at the end of the prepo were quite good I register there, but I wasn't convinced of this choice.
 	Fortunately the university organized some seminars were people from all the faculties presented their careers and the work that you are supposed to do. There I discovered that in the faculty of science existed the career of 
 	physics to become a physicist, and then it was clear that was what I wanted to do. </p>
-	<p> </p>
+	<p>During my studies at the EPN, I made very good friends and learnt a lot. When taking the lectures of quantum mechanics, I was asked to make a report about a quantum physics phenomena. This led me to know the 
+	solar and atmospheric neutrino problems and how neutrino oscillations were the solution to these problems. I was fascinated by this strange particles that can change of flavor when traveling from the source to the detection point. 
+	From that moment it was clear to me that I wanted to continue my career studying all the details and properties of neutrinos. Finally I got my bachelor degree in 2010. Since nobody at taht time was working in experimental neutrino physics in Ecuador,
+	I started to work in geophysics and volcanolgy at the IGPEN; I studied the seismic and infrasound signals of the El Reventador volcano, which is located in the Ecuadorian Amazonian region. Nevertheless, motivated by my real passion of 
+	studying  particle physics, and in particular neutrino physics, I got a scholarship to come to France to study this field. Thus I obtained a Master's degree in 2013 in particle physics at the Universite Blaise Pascal, Clermont-Ferrand, France. 
+	Finally I completed my Ph.D in October of 2016 at the Universite Grenoble Alpes, France. My PhD thesis was defended at the  Laboratoire d'Annecy de Physique des Particules (LAPP)  under the supervision of Drs. Pablo del Amo Sanchez and Dominique Duchesneau,
+	and was entitled: "Development of the source calibration system of the STEREO experiment and search for sterile neutrinos at the ILL".
+	After my PhD I moved to Paris to work as a post-doctoral researcher at the Laboratoire de l'Accélérateur Linéaire (LAL), as part of the SoLid neutrino group.
+	Lastly, in October of 2019 I have joined the GERDA/LEGEND group of the Max Planck Institute for Physics to continue my research in the fascinating world of neutrinos.</p>
 </div><!-- /.blurb -->
