--- a/cv/index.html
+++ b/cv/index.html
@@ -142,7 +142,7 @@ layout: default
 					<li>Manzanillas, L. (2018b). Calibration and quality assurance of the SoLid detector. In Proceedings, NEUTRINO 2018: Heidelberg, Germany, June 4-9, 2018. 
 						<p class="subDetails"> doi: <a href="https://doi.org/10.5281/zenodo.1300477">10.5281/zenodo.1300477.</a>  </p> </li>
 					<li>Manzanillas, L. (2017a). Status of the SoLid experiment: Search for sterile neutrinos at the SCK•CEN BR2 reactor. In Proceedings, TAUP2017, Sudbury, ON, Canada, July 24-28, 2017 (Vol. TAUP2017).
-						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/1710.07933">1710.07933[physics.ins-det]</a> </p> </li>
+						<p class="subDetails"> doi: <a href="https://doi.org/10.1088/1742-6596/1342/1/012034">10.1088/1742-6596/1342/1/012034</a> arXiv:<a href="https://arxiv.org/abs/1710.07933"> 1710.07933[hep-exp]</a> </p> </li>
 					<li>Manzanillas, L. (2017b). STEREO: Search for sterile neutrinos at the ILL. In Proceedings, Neutrino Oscillation Workshop (NOW 2016): Otranto (Lecce), Italy, September 4-11, 2016 (Vol. NOW2016, p. 033). 
 						<p class="subDetails"> doi: <a href="https://doi.org/10.22323/1.283.0033">10.22323/1.283.0033.</a> arXiv:<a href="https://arxiv.org/abs/1702.02498"> 1702.02498[hep-exp]</a> </p> </li>
 				</ul>
