--- a/mountains/index.html
+++ b/mountains/index.html
@@ -7,7 +7,7 @@ title: Mountains
         <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago and lastly I have completed some long races
 	as the Maxi Race in Annecy, which consists in about 86 km with 5400 D+. In summer I like hiking in the mountains and in winter nordic ski.</p>
 
-        <img src="MaxiRace.jpg" alt="Simply Easy Learning" width="200" >
+        <img src="MaxiRace.jpg" alt="Simply Easy Learning" width="200" float: left >
 
        
 </div><!-- /.blurb -->
