--- a/mountains/index.html
+++ b/mountains/index.html
@@ -4,10 +4,10 @@ title: Mountains
 ---
 <div class="blurb">
         <h2>Other passions</h2>
-        <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago and lastly I have completed some long races
-	as the Maxi Race in Annecy, which consists in about 86 km with 5400 D+. In summer I like hiking in the mountains and in winter nordic ski.</p>
+	<p><img style="padding:0 15px; float:left;"src="MaxiRace.jpg" alt="Simply Easy Learning" width="300"/> </p>
+	<p style="margin-top: 20px;"></p>
+        <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago. Since then I have completed some races, 15 km, half marathon, marathon and some long races	as the Maxi Race in Annecy, which consists of about 86 km with 5400 D+. During summer I use my free time to go hiking in the mountains and in wintor for nordic ski.</p>
 
-        <img src="MaxiRace.jpg" alt="Simply Easy Learning" width="200" float: left >
 
        
 </div><!-- /.blurb -->
