--- a/mountains/index.html
+++ b/mountains/index.html
@@ -8,6 +8,7 @@ title: Mountains
 	<p style="margin-top: 20px;"></p>
         <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago. Since then I have completed some races, 15 km, half marathon, marathon and some long races	as the Maxi Race in Annecy, which consists of about 86 km with 5400 D+. During summer I use my free time to go hiking in the mountains and in wintor for nordic ski.</p>
 
+	<p><img style="padding:0 15px; float:left;"src="Lac_alpes.jpg" alt="Simply Easy Learning" width="600"/> </p>
 
        
 </div><!-- /.blurb -->
