--- a/mountains/index.html
+++ b/mountains/index.html
@@ -4,9 +4,12 @@ title: Mountains
 ---
 <div class="blurb">
         <h2>Other passions</h2>
-	<p><img style="padding:0 15px; float:left;"src="Lac_alpes.jpg" alt="Simply Easy Learning" width="600"/> </p>
+	<p><img style="padding:0 15px; float:left;"src="Lac_alpes.jpg" alt="Simply Easy Learning" width="700"/> </p>
 	<p style="margin-top: 20px;"></p>
-        <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago. Since then I have completed several races: 15 km, half marathon, marathon and some long races	as the Maxi Race in Annecy, which consists of about 86 km with 5400 D+. During summer I use my free time to go hiking in the mountains and in wintor for nordic ski.</p>
+        <p align="justify"> Apart from physics my other passions are sports and mountains. I starting running long time ago. 
+	Since then I have completed several races: 15 km, half marathon, marathon. However I prefer running in the mountains but it's not 
+	always possible when you are living in a big city. I have also completed several trailrunning races from 15 km to Maxi-Race (86 km with 5400 D+).
+	During sunny days in summer I use my free time to go hiking in the mountains enjoying the views.</p>
 
 
        
