add SoLid reference

--- a/cv/index.html
+++ b/cv/index.html
@@ -111,6 +111,8 @@ layout: default
 			<div class="sectionContent">
 				<h2>Journal articles</h2>
 				<ul>
+					<li>Abreu, Y. et al. (2020).SoLid: A short baseline reactor neutrino experiment. Submitted to JINST. 
+						<p class="subDetails"> arXiv:<a href="https://arxiv.org/abs/2002.05914">2002.05914[physics.ins-det]</a> </p> </li>
 					<li>Abreu, Y. et al. (2019). Development of a Quality Assurance Process for the SoLid Experiment. JINST, 14(02), P02014. 
 						<p class="subDetails">doi: <a href="https://doi.org/10.1088/1748-0221/14/02/P02014">10.1088/1748-0221/14/02/P02014.</a> arXiv:<a href="https://arxiv.org/abs/1811.05244">1811.05244[physics.ins-det]</a> </p> </li>
 					<li>Cabrera, A. et al. (2019). Neutrino Physics with an Opaque Detector. Submitted to NCP. 
