--- a/cv/index.html
+++ b/cv/index.html
@@ -52,8 +52,8 @@ layout: default
 				<article>
 					<h2>Post-doctoral researcher at <a href="https://www.mpp.mpg.de/"> Max Planck Institute for Physics</a>, Munich, Germany: GERDA/LEGEND experiments </h2>
 					<p class="subDetails">October 2019 - Present</p>
-					<p> Data analysis with GERDA data and.<br>
-					 R&D for LEGEND200/LEGEND1000: Characterization and optimization  of PEN as self-vetoing structural material for LEGEND detector</p>
+					<p> R&D for LEGEND200/LEGEND1000: Characterization and optimization  of PEN as self-vetoing structural material for LEGEND detector <br>
+					 Data analysis with GERDA data</p>
 				</article>
 
 				<article>
