--- a/cv/index.html
+++ b/cv/index.html
@@ -37,6 +37,7 @@ layout: default
 				<li>w: <a href="https://lmanzanillas.github.io/">https://lmanzanillas.github.io/</a></li>
 				<li>m: +33 6 34 29 ** ** </li>
 				<li>cv: <a href="/cv/pdfs/cv-lmanzanillas.pdf"> Full cv in pdf</a>
+				<li>cv: <a href="/cv/pdfs/cv-lmanzanillas_fr.pdf"> Full cv in pdf in french</a>
 			</ul>
 		</div>
 		<div class="clear"></div>
