--- a/neutrinos/index.html
+++ b/neutrinos/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Neutrinos
 ---
 <div class="blurb">
-        <h2>Other passions</h2>
+        <h2>Why neutrinos are so interesting?</h2>
 	<p><img style="padding:0 15px; float:left;"src="neutrinos.jpg" alt="Simply Easy Learning" width="500"/> </p>
 	<p style="margin-top: 20px;"></p>
         <p align="justify"> Neutrinos the ghost particles.</p>
