--- a/neutrinos/index.html
+++ b/neutrinos/index.html
@@ -17,7 +17,11 @@ title: Neutrinos
 		understand how the Universe evolved after the big bang and why there is more matter than antimatter.  Third,
 		neutrinos could be of another type of particle different from all other particles of the Standard Model that
 		are known as Majorana Particles. If it’s the case neutrinos could be their own antiparticles. Four, we know 
-		that according to the Standard Model there are three types of neutrinos (usually known as active neutrinos) and that should be massless, however from experiments we know that neutrinos do have a mass and that they  oscillate or change of flavor (or type) when travelling from one point to another. In addition sterile neutrinos could exist, which could be another type of neutrinos  but interacting even less than the active neutrinos (like the ghost of the ghost).This is just a short overview of the may open question on this field and why neutrinos are so interesting..
+		that according to the Standard Model there are three types of neutrinos (usually known as active neutrinos) and that should be massless, 
+		however from experiments we know that neutrinos do have a mass and that they  oscillate or change of flavor (or type) when travelling 
+		from one point to another. In addition sterile neutrinos could exist, which could be another type of neutrinos  but interacting
+		even less than the active neutrinos (like the ghost of the ghost).This is just a short overview of the many open question on this
+		field and why neutrinos are so interesting..
 		the ghost particles.</p>
        
 </div><!-- /.blurb -->
